--- a/.github/workflows/main_acs-pbs-web-calling-hero.yml
+++ b/.github/workflows/main_acs-pbs-web-calling-hero.yml
@@ -21,14 +21,26 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      # - name: npm install, build, and test
+      #   run: |
+      #     npm install
+      #     npm run build --if-present
+      #     npm run test --if-present
+
+      - name: Build
+        shell: bash
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          release_name=Group-Calling
+          unset CI
+          # Build everything
+          npm run setup
+          npm run build
+          npm run package
+
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        # run: zip release.zip ./* -r
+        run: zip release.zip ./Calling/dist/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
