--- a/.github/workflows/main_acs-pbs-web-calling-hero.yml
+++ b/.github/workflows/main_acs-pbs-web-calling-hero.yml
@@ -78,6 +78,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'acs-pbs-web-calling-hero'
-          slot-name: 'Production'
+          # slot-name: 'Production'
           package: .
           
