--- a/.github/workflows/main_acs-pbs-web-calling-hero.yml
+++ b/.github/workflows/main_acs-pbs-web-calling-hero.yml
@@ -79,5 +79,5 @@ jobs:
         with:
           app-name: 'acs-pbs-web-calling-hero'
           # slot-name: 'Production'
-          package: .
+          package: ./Calling/dist
           
